add modal, menu & accordeon

--- a/index.html
+++ b/index.html
@@ -365,6 +365,9 @@
 	<!-- modal (end) -->
 
 	<script src="script/tabs.js"></script>
+	<script src="script/modal.js"></script>
+	<script src="script/menu.js"></script>
+	<script src="script/accordeon.js"></script>
 </body>
 
 </html>
