add scroll and timer

--- a/index.html
+++ b/index.html
@@ -368,6 +368,10 @@
 	<script src="script/modal.js"></script>
 	<script src="script/menu.js"></script>
 	<script src="script/accordeon.js"></script>
+	<script src="script/timer.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/seamless-scroll-polyfill@latest/lib/bundle.min.js"></script>
+	<script src="script/scroll.js"></script>
+	<script src="script/sendForm.js"></script>
 </body>
 
 </html>
